fix: background fixed on mobile browser

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,8 +3,6 @@
 body {
   font-family: Poppins, sans-serif;
   font-size: 16px;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url('/background.webp') no-repeat 0 0 / cover fixed;
 }
 .container {
   max-width: 1170px;
